# LLM-Fine-Tuning-Evaluation-Framework

./: .gitignore  01_dataset_generation.ipynb  02_lora_finetuning.ipynb  03_evaluation_pipeline.ipynb  README.md  api.py  pyproject.toml
src/: api.py  prompts.py
